# micro-oracle-lm

./: .gitignore  CMakeLists.txt  CMakeSettings.json  main.cpp  micro_oracle_lm.h  micro_oracle_tokenizer.h  random.h  utils.h
